use spring publish event

--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/add.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/add.html
@@ -124,7 +124,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="col-sm-3 control-label is-required">告警选项：</label>
+        <label class="col-sm-3 control-label">告警选项：</label>
         <div class="col-sm-9">
           <input type="hidden" name="alertOptions" />
           <!-- thymeleaf不支持位运算符：${(job.alertOptions & 1) == 1} -->
