--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/edit.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/edit.html
@@ -124,7 +124,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="col-sm-3 control-label is-required">告警选项：</label>
+        <label class="col-sm-3 control-label">告警选项：</label>
         <div class="col-sm-9">
           <input type="hidden" name="alertOptions" />
           <label class="check-box"><input type="checkbox" name="alertCheckbox" value="1" th:checked="${job.alertOptions==1 || job.alertOptions==3}" />异常警报</label>
