--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/worker.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/worker.html
@@ -70,8 +70,8 @@
           title: 'Port'
         },
         {
-          field: 'pingTime',
-          title: 'Ping time(ms)'
+          field: 'responseTime',
+          title: 'RT(ms)'
         },
         {
           field: 'maximumPoolSize',
