--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/supervisor/supervisor.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/supervisor/supervisor.html
@@ -37,8 +37,8 @@
           align: 'center'
         },
         {
-          field: 'pingTime',
-          title: 'Ping time(ms)',
+          field: 'responseTime',
+          title: 'RT(ms)',
           align: 'center'
         },
         {
