--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/include.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/include.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="keywords" content="">
 	<meta name="description" content="">
+	<meta th:content="${session.csrf_token}" name="csrf-token"/>
 	<title th:text="${title}"></title>
 	<link th:href="@{/css/bootstrap.min.css?v=3.3.7}" rel="stylesheet"/>
 	<link th:href="@{/css/font-awesome.min.css?v=4.7.0}" rel="stylesheet"/>
@@ -19,7 +20,7 @@
 <div th:fragment="footer">
     <script th:inline="javascript"> var ctx = [[@{/}]]; var lockscreen = [[${session.lockscreen}]]; if(lockscreen){window.top.location=ctx+"lockscreen";} </script>
     <a id="scroll-up" href="javascript:" class="btn btn-sm display"><i class="fa fa-angle-double-up"></i></a>
-	<script th:src="@{/js/jquery.min.js?v=3.6.3}"></script>
+	<script th:src="@{/js/jquery.min.js?v=3.7.1}"></script>
 	<script th:src="@{/js/bootstrap.min.js?v=3.3.7}"></script>
 	<!-- bootstrap-table 表格插件 -->
 	<script th:src="@{/ajax/libs/bootstrap-table/bootstrap-table.min.js?v=1.22.6}"></script>
