sync ruoyi code

--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
@@ -193,8 +193,7 @@
     {
       field: 'runEndTime',
       title: '运行结束时间',
-      width: '140',
-      visible: false
+      width: '140'
     },
     {
       field: 'runDuration',
