--- a/disjob-admin/ruoyi-admin/src/main/resources/static/css/skins.css
+++ b/disjob-admin/ruoyi-admin/src/main/resources/static/css/skins.css
@@ -935,6 +935,32 @@
     background-color: #f9fafc;
 }
 
+
+.theme-light.skin-blue .nav:not(.navbar-toolbar)>li.selected {
+	border-right: 3px solid #1890ff;
+	margin-right: 2px;
+}
+
+.theme-light.skin-purple .nav:not(.navbar-toolbar)>li.selected{
+	border-right: 3px solid #722ed1;
+	margin-right: 2px;
+}
+
+.theme-light.skin-green .nav:not(.navbar-toolbar)>li.selected{
+	border-right: 3px solid #52c41a;
+	margin-right: 2px;
+}
+
+.theme-light.skin-red .nav:not(.navbar-toolbar)>li.selected{
+	border-right: 3px solid #f5222d;
+	margin-right: 2px;
+}
+
+.theme-light.skin-yellow .nav:not(.navbar-toolbar)>li.selected{
+	border-right: 3px solid #faad14;
+	margin-right: 2px;
+}
+
 /** 深蓝主题 theme-light **/
 /**
 .skin-blue.theme-blue .logo, .skin-white.theme-blue .logo {
@@ -1025,4 +1051,65 @@
 
 .fixed-sidebar.theme-blue.mini-navbar .nav li:hover>.nav-second-level {
     background-color: rgba(15,41,80,1);
+}
+
+/* tab页签样式 */
+.page-tabs a {
+	color: rgba(0,0,0,0.65)!important;
+	padding: 0 8px 0 8px;
+	min-width: 50px;
+	text-align: center;
+	line-height: 26px;
+	border-radius: 2px;
+	margin:5px 0 0 4px;
+	border: 1px solid #d9d9d9;
+}
+
+.page-tabs a.active:hover, .page-tabs a.active i:hover {
+	color: #000000!important;
+	background: #f5f5f5!important;
+}
+
+.page-tabs a.active:hover i {
+	color: #ffffff!important;
+}
+
+.page-tabs a.active i:hover {
+	color: #ffffff!important;
+	background: transparent!important;
+}
+
+.page-tabs a.active i {
+	color: #ffffff;
+}
+
+/* tab页签主题样式 */
+.skin-blue .page-tabs a.active {
+	color: #ffffff!important;
+	background: #1890ff!important;
+	border: 1px solid #1890ff;
+}
+
+.skin-purple .page-tabs a.active {
+	color: #ffffff!important;
+	background: #722ed1!important;
+	border: 1px solid #722ed1;
+}
+
+.skin-green .page-tabs a.active {
+	color: #ffffff!important;
+	background: #52c41a!important;
+	border: 1px solid #52c41a;
+}
+
+.skin-red .page-tabs a.active {
+	color: #ffffff!important;
+	background: #dd4b39!important;
+	border: 1px solid #dd4b39;
+}
+
+.skin-yellow .page-tabs a.active {
+	color: #ffffff!important;
+	background: #f39c12!important;
+	border: 1px solid #f39c12;
 }
