--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/index-topnav.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/index-topnav.html
@@ -171,7 +171,7 @@
             </button>
             <nav class="page-tabs menuTabs">
                 <div class="page-tabs-content">
-                    <a href="javascript:" class="active menuTab" th:data-id="@{/system/main}">首页</a>
+                    <a href="javascript:" class="menuTab" th:data-id="@{/system/main}">首页</a>
                 </div>
             </nav>
             <button class="roll-nav roll-right tabRight">
@@ -272,6 +272,11 @@ function applyPath(url) {
     }
 }
 
+//默认激活页签
+function tabActive() {
+  $('.menuTab[data-id="' + ctx + 'system/main"]').addClass('active');
+}
+
 $(function() {
 	var lockPath = storage.get('lockPath');
 	if($.common.equals("history", mode) && window.performance.navigation.type == 1) {
@@ -279,6 +284,7 @@ $(function() {
 	    if ($.common.isNotEmpty(url)) {
 	    	applyPath(url);
 	    } else {
+        tabActive();
 	    	$(".navbar-toolbar li a").eq(0).click();
 	    }
 	} else if($.common.isNotEmpty(lockPath)) {
@@ -293,6 +299,7 @@ $(function() {
 	    	if($.common.equals("history", mode)) {
 	    		storage.set('publicPath', "");
 	    	}
+        tabActive();
 	    	$(".navbar-toolbar li a").eq(0).click();
 	    }
 	}
