upgrade jar version

--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
@@ -274,7 +274,7 @@
         <li>浏览器访问【 <a href="http://127.0.0.1:80/" rel="nofollow">http://127.0.0.1:80/</a> 】登录管理后台，用户名/密码：<code>admin</code>/<code>123456</code></li>
         <li>登录后在左侧菜单栏找到<code>调度管理</code>菜单，即可使用调度管理功能</li>
         <li><strong>Supervisor</strong>：查看Supervisor机器列表及其运行情况</li>
-        <li><strong>管理分组</strong>：给管理员使用，管理分组(一个分组可理解为是一个应用)</li>
+        <li><strong>管理分组</strong>：给管理员使用，用于管理所有的组数据(一个组可理解为是一个应用)</li>
         <li><strong>我的分组</strong>：给应用的开发人员使用，可查看每个组(应用)的Worker机器列表及其运行情况</li>
         <li><strong>作业配置</strong>：作业(job)配置，包括查看、新增、修改、删除、触发、禁用等</li>
         <li><strong>任务实例</strong>：job在某一时间点被触发执行的实例(instance)，一个实例会拆分成若干个任务(task)
