--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <th:block th:insert="~{include :: header('查看作业配置')}" />
+  <th:block th:insert="~{include :: header('Job view')}" />
   <th:block th:insert="~{include :: jsonview-css}" />
 </head>
 <body class="white-bg">
