--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/edit.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <th:block th:insert="~{include :: header('修改作业配置')}" />
+  <th:block th:insert="~{include :: header('Job edit')}" />
   <th:block th:insert="~{include :: select2-css}" />
 </head>
 <body class="white-bg">
