--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/job.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/job.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <head>
-  <th:block th:insert="~{include :: header('作业配置')}" />
+  <th:block th:insert="~{include :: header('Job list')}" />
   <th:block th:insert="~{include :: select2-css}" />
 </head>
 <body class="gray-bg">
