--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <th:block th:insert="~{include :: header('任务实例')}" />
+  <th:block th:insert="~{include :: header('Instance list')}" />
   <th:block th:insert="~{include :: select2-css}" />
 </head>
 <body class="gray-bg">
@@ -128,23 +128,19 @@
     expandAll: false,
     expandFirst: false,
     showToggle: false,
-    expandColumn: 1,
+    expandColumn: 0,
     pagination: true,
-    viewUrl: prefix + "/tasks/{id}",
-    modalName: "任务实例",
+    viewUrl: prefix + "/task/{id}",
+    viewName: "Task list",
     fixedColumns: true,
-    fixedNumber: 2,
+    fixedNumber: 1,
     onLoadSuccess: function () {
       $("input[name='resetSearch']").val("false");
     },
     columns: [{
-      field: 'selectItem',
-      radio: true
-    },
-    {
       field: 'instanceId',
       title: 'InstanceId',
-      width: '240',
+      width: '210',
       formatter: function (value, row, index) {
         return value === row.wnstanceId ? value : '<a href="javascript:void(0)" onclick="$.operate.view(\'' + value + '\')">' + value + '</a>';
       }
