--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/add.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/add.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <th:block th:insert="~{include :: header('新增分组')}" />
+  <th:block th:insert="~{include :: header('Group add')}" />
   <style>
     label {
       text-align: right;
