print banner configurable

--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/system/dept/dept.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/system/dept/dept.html
@@ -57,15 +57,13 @@
 		        code: "deptId",
 		        parentCode: "parentId",
 		        uniqueId: "deptId",
+            expandColumn: 0,
 		        url: prefix + "/list",
 		        createUrl: prefix + "/add/{id}",
 		        updateUrl: prefix + "/edit/{id}",
 		        removeUrl: prefix + "/remove/{id}",
 		        modalName: "部门",
-		        columns: [{
-                    field: 'selectItem', 
-                    radio: true
-                 },
+		        columns: [
                  {
 		            field: 'deptName',
 		            title: '部门名称',
